tests/models/enum/unnamed/u64/fail/validate.rs
use dade::{model, Result};
#[model]
enum TestModel {
    Value(
       #[field(validate = validate_fn)]
        u64
    ),
}
fn main() {}
